fixtures/cell_env/invalid/05_resource_increase.sea
Cell "ResourceBump"
    @profile "python-agent-v1"
    @cpu "2"
